perf: stabilize deployment runtime and edge caching